Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7
* Add remove and reset session methods

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Erase user email when party is erased
* Require email only for active user
* Add maximum authentication attempt

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Increase session randomness to 32 bytes
* Manage email case insensitively

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)

Version 4.2.0 - 2016-11-28
* Initial release